--- a/src/akkiai/app/config/task/tasks5.yaml
+++ b/src/akkiai/app/config/task/tasks5.yaml
@@ -57,8 +57,6 @@ market_readiness:
     </key_recommendations>
     </market_strategy>
   agent: MarketReadinessAgent
-  inputs:
-    startup_info: '{STARTUP_INFO}'
 
 
 technology_adoption_specilist: 
@@ -107,8 +105,7 @@ technology_adoption_specilist:
     ...
     </recommendations>
   agent: TechnologyAdoptionSpecialistAgent
-  inputs:
-    startup_info: '{STARTUP_INFO}'
+
   
 risk_assessment_specialist: 
   description: >-
@@ -168,8 +165,6 @@ risk_assessment_specialist:
     </recommendations>
     </market_strategy>
   agent: RiskAssesmentSpecialistAgent
-  inputs:
-   startup_info: '{STARTUP_INFO}'
   
 blue_ocean_specialist: 
   description: >-
@@ -224,7 +219,7 @@ blue_ocean_specialist:
     <factor_identification>
     <eliminate>[Factors to eliminate]</eliminate>
     <reduce>[Factors to reduce]</reduce>
-    <raise>[Factors to raise]</raise>
+    <raise_factors>[Factors to raise]</raise_factors>
     <create>[Factors to create]</create>
     </factor_identification>
 
@@ -237,7 +232,5 @@ blue_ocean_specialist:
     </summary>
     </blue_ocean_analysis>
   agent: BlueOceanSpecialistAgent
-  inputs:
-   startup_info: '{STARTUP_INFO}'
 
   
